--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,6 +1,2 @@
 # Mongo DB
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
-spring.data.mongodb.database=baeldung
-spring.data.mongodb.username=mongo
-spring.data.mongodb.password=mongo
+spring.data.mongodb.uri=mongodb://mongo:mongo@localhost:27017/?authSource=admin
