--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 spring.application.name=order-service
 management.endpoints.web.exposure.include=*
-spring.data.mongodb.host=${MONGODB_HOST}
-spring.data.mongodb.port=${MONGODB_PORT}
-spring.data.mongodb.database=${MONGODB_DATABASE}
-spring.data.mongodb.username=${MONGODB_USER}
-spring.data.mongodb.password=${MONGODB_PASS}
+spring.data.mongodb.uri=${MONGODB_URI}
+spring.data.mongodb.database=orders
+
+server.compression.enabled=true
+spring.boot.jvm.options=-XX:+UseZGC
+
