--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,4 +7,13 @@ services:
       MONGO_INITDB_ROOT_USERNAME: mongo
       MONGO_INITDB_ROOT_PASSWORD: mongo
       MONGO_INITDB_DATABASE: orders
-    ports: ['27017:27017']
+    ports: [ '27017:27017' ]
+  order-service:
+    container_name: order-service
+    restart: always
+    build: .
+    ports: [ '8080:8080' ]
+    environment:
+      MONGODB_URI: 'mongodb://mongo:mongo@mongodb:27017/orders?authSource=admin'
+    depends_on:
+      - mongodb
