feat: add services to send order to another service by http or message

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,11 @@ spring.data.mongodb.database=orders
 server.compression.enabled=true
 spring.boot.jvm.options=-XX:+UseZGC
 
+
+checkout-order-service.url=${CHECKOUT_SERVICE_URL:http://localhost:8082}
+spring.rabbitmq.host=${RABBITMQ_HOST:localhost}
+spring.rabbitmq.port=${RABBITMQ_PORT:5672}
+spring.rabbitmq.username=${RABBITMQ_USER:guest}
+spring.rabbitmq.password=${RABBITMQ_PASS:guest}
+
+queue.order-checkout=order-checkout
