--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -17,3 +17,9 @@ services:
       MONGODB_URI: 'mongodb://mongo:mongo@mongodb:27017/orders?authSource=admin'
     depends_on:
       - mongodb
+  rabbitmq:
+    image: rabbitmq:3.8-management
+    container_name: rabbitmq
+    ports:
+      - 5672:5672
+      - 15672:15672
